Events Cleaning: Fix reference to events

--- a/Events Cleaning.ipynb
+++ b/Events Cleaning.ipynb
@@ -242,7 +242,7 @@
     "    return ', '.join(res)\n",
     "\n",
     "df['tags'] = df['tags'].map(lambda x: unlist(x))\n",
-    "display(df.head(2))"
+    "display(df.head(2))n"
    ]
   },
   {
@@ -801,7 +801,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "events = events.loc[events['League'] != 'European_Championship']\n",
+    "df = df.loc[events['League'] != 'European_Championship']\n",
     "\n",
     "events.to_csv('clean/events_no_champions.csv', index = False)"
    ]
